# flakes

./: flake.nix
haskell/: haedosa.cabal  overlay.nix
templates/haskell/: develop.nix  flake.nix  hie.yaml  overlay.nix
templates/haskell/app/: haedosa.hs
templates/haskell/haedosa-app/: haedosa-app.cabal
templates/haskell/haedosa-lib/: haedosa-lib.cabal
templates/haskell/haedosa-lib/test/: test.hs
templates/haskell/src/: Haedosa.hs
templates/python-jupyter/: README.org
