cabal-version:         2.4
name:                  haedosa
version:               0.1.0.0

common common
  build-depends:       base

executable haedosa
  import:              common
  hs-source-dirs:      app
  main-is:             haedosa.hs
  build-depends:       haedosa

library
  import:              common
  hs-source-dirs:      src
  exposed-modules:     Haedosa
