cabal-version:         2.4
name:                  haedosa-app
version:               0.1.0.0

common common
  build-depends:
      base
    , haedosa-lib
    , tasty-discover
  default-language:    Haskell2010
  ghc-options:
    -O2 -j
    -eventlog
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-safe
    -Wno-unsafe
    -Wno-missing-import-lists
    -Wno-missing-export-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-missing-deriving-strategies
    -Wno-missing-safe-haskell-mode
  default-extensions:
      BangPatterns
    , ConstraintKinds
    , DataKinds
    , DeriveAnyClass
    , DeriveFoldable
    , DeriveFunctor
    , DeriveGeneric
    , DeriveTraversable
    , DerivingStrategies
    , DerivingVia
    , EmptyCase
    , ExistentialQuantification
    , FlexibleContexts
    , FlexibleInstances
    , GeneralizedNewtypeDeriving
    , ImportQualifiedPost
    , KindSignatures
    , KindSignatures
    , LambdaCase
    , MultiParamTypeClasses
    , OverloadedStrings
    , QuasiQuotes
    , RankNTypes
    , RecordWildCards
    , ScopedTypeVariables
    , StandaloneDeriving
    , StandaloneKindSignatures
    , TemplateHaskell
    , TupleSections
    , TypeApplications
    , TypeOperators
    , TypeSynonymInstances
    , ViewPatterns

library
  import:              common
  hs-source-dirs:      src
  exposed-modules:
    Haedosa.App

executable haedosa-app
  import:              common
  hs-source-dirs:      src
  main-is:             haedosa.hs
  build-depends:
    haedosa-app

test-suite test-haedosa-app
  import:              common
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:
      haedosa-app
    , tasty
    , tasty-hunit
    , tasty-hspec
    , tasty-golden
    , tasty-hedgehog
    , tasty-smallcheck
    , tasty-quickcheck
    , tasty-expected-failure
  other-modules:
    Test
